--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@chakra-ui/react": "^3.5.1",
     "@emotion/react": "^11.14.0",
+    "@vercel/analytics": "^1.4.1",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
